# sims2ha

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CURRENT_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  build.sh  coverage.xml  eslint.config.mjs  hacs.json  main.py  package-lock.json  package.json  pyproject.toml  update_stale_theme.py  update_theme.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  pr-preview.yml  release.yml
.playwright-mcp/: page-2026-07-16T13-46-53-895Z.yml  page-2026-07-16T13-48-11-236Z.yml  page-2026-07-17T18-06-39-407Z.yml
artifacts/: icons-extracted.html
artifacts/cards/: preview-0.html  preview-1.html  preview-2.html  sims2-bundle.js
config-examples/: configuration.yaml
custom_components/sims2ha/: __init__.py  config_flow.py  const.py  helpers.py  manifest.json  sensor.py  services.yaml  strings.json  websocket_api.py
custom_components/sims2ha/dashboards/: sims2-automations.yaml  sims2-climate.yaml  sims2-lights.yaml  sims2-needs.yaml  sims2-overview.yaml  sims2-power.yaml  sims2-security.yaml  sims2-system.yaml
custom_components/sims2ha/frontend/: sims2-bundle.js  sw.js
dashboards/: README.md  sims2-automations.yaml  sims2-climate.yaml  sims2-needs.yaml  sims2-power.yaml  sims2-security.yaml
dashboards/static/: sims2-starter.yaml
docs/: CARD-MOD.md  HA_THEMING_CAPABILITIES.md  ICONS.md  INSTALL.md  LOGIN_SCREEN_CUSTOMIZATION.md  PALETTE.md  PLAN.md
reference-images/benguiat-gothic-regular/: readme.html
scripts/: audit_theme_variables.py  precommit.sh  prepush.sh  render-all.js  render-cards.js  sims2-pre-push.sh
src/: header-enhancement.js  loading-splash-enhancement.js  sidebar-enhancement.js  sims2-divider-card.js  sims2-fonts.css  sims2-gauge-card.js  sims2-icons.js  sims2-loading-card.js  sims2-loading-splash-card.js  sims2-overrides.css  sims2-panel-card.js  sims2-plumbob-card.js  sims2-theme.css
tests/: bundle.test.js  cards.test.js  test_coverage_example.py  test_sims2ha.py
themes/: sims2.yaml
(+13 files in other folders)
