[project]
name = "sims2ha"
version = "0.1.0"
description = "Sims 2 theme for Home Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "ty>=0.0.63",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # Pycodestyle errors
    "F",      # Pyflakes errors
    "W",      # Pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-bandit
    "C4",     # flake8-comprehensions
    "T20",    # print statements
    "ARG",    # untyped arguments
    "DTZ",    # datetime
    "G",      # logging
    "ICN",    # import conventions
    "PIE",    # misc fixes
    "SIM",    # simplify
    "PERF",   # performance
    "RUF",    # ruff-specific
]
ignore = []

[tool.ty]
# Enable strict type checking
# We'll use the strict mode of ty

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["sims2ha", "custom_components"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/setup.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80